tests/fixtures/negative/style/UnusedParameter.kt
package style

fun foo(value: Int) {
    println(value)
}
